# hpc-job-analyst

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: changelog.md  contributing.md  index.md  security-audit-2026-07-22.md
docs/admin-guide/: configuration.md  installation.md  production.md  system-context.md
docs/examples/: client.conf.example  system-context.md.example
docs/user-guide/: cli-reference.md  output.md  quickstart.md
server/: proxy.py
src/analyze_job/: __init__.py  cli.py  telemetry.py
